# runaway-datastructures

./: .gitignore  Cargo.toml  README.md  overhead.csv  paul.csv  split_times.csv  time_comp.csv
.cargo/: config
benches/: rank_benchmark.rs  select_benchmark.rs
benches/rank/: index.rs
benches/select/: index.rs  large.rs  length.rs
benchi/: csvify.py  generate.sh  hetzner.sh  run.sh
paper/: paper.bib  paper.tex
src/: bin.rs  block_rank.rs  lib.rs  naive_vector.rs  query.rs  runaway_vector.rs
src/access/: mod.rs
src/rank/: block_full_no_lookup_rank.rs  block_rank.rs  interleaved_rank.rs  lecture_no_lookup_rank.rs  lecture_rank.rs  mod.rs  naive_rank.rs
src/select/: lecture_select.rs  mod.rs  naive_select.rs
