[package]
name = "runaway-datastructures"
version = "0.1.0"
edition = "2021"

[lib]
name = "runaway_datastructures"
path = "src/lib.rs"

[[bin]]
name = "main"

[[bin]]
name = "query_reader"

[dependencies]
log = "0.4.21"
bitvec = "1"
rand = { version = "0.8.5", features = [ "small_rng" ] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "rank"
path = "benches/rank/index.rs"
harness = false